<resources>
    <string name="app_name">MovieShow_Store</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="splash">splash screen</string>
    <string name="img_vinilo">imagen vinilo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="inf_perso">Informacion Personal</string>
    <string name="cd_list">Lista de CD\'S</string>
    <string name="alquiler">Mis alquileres</string>
    <string name="cerrar">Cerrar Sesion</string>
    <string name="sanciones">sanciones</string>
    <string name="prox_vencer">Alquileres proximos a vencer</string>
</resources>